# skill-mining-v2

./: .env  .env.example  README.md  config.py  eval.py  github_client.py  ground_truth.json  ground_truth_notes.txt  main.py  manual_evaluation.xlsx  new_config.py  pyproject.toml  response_logger.py  tracing.py  usernames.txt
agents/: tools.py
agents/v1_single/: agent.py  prompts.py
agents/v2_hierarchical/: analysis_agent.py  orchestrator.py  prompts.py  ranking_agent.py  retrieval_agent.py  synthesis_agent.py
api/: main.py  schemas.py
api/routes/: eval_logs.py  health.py  profile.py  search.py
chroma_store/: chroma.sqlite3
collectors/: profile_collector.py  repo_collector.py
data/: chiphuyen_processed_v2.json  hnarayanan_processed_v2.json  honnibal_processed_v2.json  karpathy_processed_v2.json  nayafia_processed_v2.json  ryanmcdermott_processed_v2.json  sindresorhus_processed_v2.json  tiangolo_processed_v2.json
data/agents/: agents.py  pipeline.py  tools.py
data/preprocessed/: chiphuyen_preprocessed.json  justmarkham_preprocessed.json
data/processed/: ines_processed_v2.json  jakubroztocil_processed_v2.json  justmarkham_processed_v2.json  krittikasardar_processed_v2.json
data/raw/: chiphuyen_raw_v2.json  hnarayanan_raw_v2.json  (+10 more)
eval_logs/: v1_single_responses.jsonl  v2_hierarchical_responses.jsonl
ingestion/: chunker.py  embedder.py  enricher.py  indexer.py  parser.py  run.py
preprocessor/: chunker.py  cleaner.py  historical.py  pipeline.py
scripts/: test_agent_workflow.py
transformers_local/: schema_builder.py
ui/: app.py
