[project]
name = "github-profile-intelligence"
version = "0.2.0"
description = "GitHub profile ingestion, indexing, and AI-powered candidate intelligence"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.9.1",
    "ijson>=3.3.0",
    "tiktoken>=0.9.0",
    "chromadb>=1.5.9",
    "openai>=1.109.0",
    "langchain>=1.3.1",
    "langgraph>=0.4.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-community>=0.3.31",
    "langsmith>=0.8.5",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.34.0",
    "streamlit>=1.57.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "deepeval>=4.0.2",
]

[project.scripts]
ingest = "ingestion.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "agents", "api", "ui"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]